--- a/package.json
+++ b/package.json
@@ -3,15 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {    
+  "scripts": {
     "start": "NODE_ENV=production node server",
-    "dev":"nodemon server"
+    "dev": "nodemon server"
   },
   "author": "Rajesh Joshi",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "docgen": "^0.0.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.6",
+    "geocoder": "^0.2.3",
+    "helmet": "^4.5.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.3",
+    "morgan": "^1.10.0",
+    "node-geocoder": "^3.27.0",
+    "nodemailer": "^6.5.0",
+    "slugify": "^1.5.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
